Kanban: prevent wrapping on queue titles (experiment)

--- a/app/assets/stylesheets/kanban.scss
+++ b/app/assets/stylesheets/kanban.scss
@@ -86,6 +86,8 @@
     line-height: 0.88em;
     vertical-align: top;
     
+    div { white-space: nowrap; }
+    
     .small {
       display: block;
       font-weight: normal;
